# perch

./: .codecov.yml  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  TODO.md  pyproject.toml  tox.ini
.github/workflows/: main.yml  publish.yml
docs/: requirements.txt
docs/source/: acknowledgements.rst  advanced.rst  api.rst  concepts.rst  conf.py  index.rst  quickstart.rst  usage.rst
examples/: classify_galaxies.ipynb  run_perch_2d_example.ipynb  run_perch_example.ipynb  run_perch_example.py  significant_ph.py  test_pycriper.py
perch/: __init__.py  perch_ph.py  perch_structure.py  perch_structures.py  perch_utils.py  ph.py  pplot.py  structure.py  structures.py  utils.py
perch/py_cripser/: coboundary_enumerator.py  compute_pairs.py  config.py  cube.py  cubicalripser.py  cubicalripser_pybind.py  dense_cubical_grids.py  joint_pairs.py  union_find.py  write_pairs.py
perch/tests/: _fixtures.py  _plotting.py  conftest.py  test_dummy.py  test_edge_cases.py  test_geometry.py  test_hierarchy.py  test_io.py  test_pad_essential.py  test_ph.py  test_pplot.py  test_regression.py  test_remove_structures.py  test_seg_io.py  test_structure.py  test_structures.py  test_wcs.py
perch/tests/data/: 2d_ring_generators.npz  2d_two_peaks_generators.npz  3d_shell_generators.npz  3d_two_peaks_generators.npz  _regenerate.py
