[project]
name = "perch"
description = "perch is a python package for applying the topological technique of persistent homology to images & cubes"
authors = [{name = "ONeill"}]
dynamic = ["version"]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "numpy>=1.24",
  "packaging>=19",
  "setuptools>=62.3.3",
  "tqdm>=4.64",
  "jax",
  "matplotlib>=3",
  "cripser>=0.0.16",
  "connected-components-3d",
]

[project.optional-dependencies]
test = [
  "numpy>=1.24",
  "pytest-astropy>=0.10",
  "pytest-cov>=3",
]
dev = [
]
docs = [
  "sphinx-astropy",
  "mock",
  "sphinx-rtd-theme",
  "sphinx_autodoc_typehints",
]


[project.urls]
homepage = "https://perch.readthedocs.org"
documentation = "https://perch.readthedocs.org"
repository = "https://github.com/theo-oneill/perch"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
            "setuptools>=61.2",
            "setuptools_scm"
           ]

#[build-system]
#requires = ["flit_core >=3.2,<4"]
#build-backend = "flit_core.buildapi"


[tool.setuptools]
zip-safe = false
include-package-data = false

[tool.setuptools.packages]
find = { namespaces = false }

[tool.setuptools.package-data]
"perch.tests" = [
  "data/*",
  "data/*/*",
]

[tool.setuptools_scm]
write_to = "perch/version.py"


[tool.pytest.ini_options]
minversion = "3.0"
norecursedirs = [ "build", "docs/_build" ]
doctest_plus = "enabled"
filterwarnings = [
    "error::ResourceWarning",
    "error::DeprecationWarning",
    "ignore:invalid escape sequence",
    # Triggered because Matplotlib uses deprecated PIL API
    "ignore:'mode' parameter is deprecated"
]


[tool.coverage.run]
omit = [
  "perch/__init__*",
  "perch/conftest.py",
  "perch/*setup*",
  "perch/*/tests/*",
  "perch/tests/test_*",
  "perch/extern/*",
  "perch/utils/compat/*",
  "perch/version*",
  "perch/wcs/docstrings*",
  "perch/_erfa/*",
  "*/perch/__init__*",
  "*/perch/conftest.py",
  "*/perch/*setup*",
  "*/perch/*/tests/*",
  "*/perch/tests/test_*",
  "*/perch/extern/*",
  "*/perch/utils/compat/*",
  "*/perch/version*",
  "*/perch/wcs/docstrings*",
  "*/perch/_erfa/*",
]

[tool.coverage.report]
exclude_lines = [
  # Have to re-enable the standard pragma
  "pragma: no cover",
  # Don't complain about packages we have installed
  "except ImportError",
  # Don't complain if tests don't hit assertions
  "raise AssertionError",
  "raise NotImplementedError",
  # Don't complain about script hooks
  'def main\(.*\):',
  # Ignore branches that don't pertain to this version of Python
  "pragma: py{ignore_python_version}",
  # Don't complain about IPython completion helper
  "def _ipython_key_completions_",
]

[tool.upload_docs]
upload-dir = "docs/_build/html"
show-response = "1"
